--- a/rsi/windows/Tracker/KeyRecord.resx
+++ b/rsi/windows/Tracker/KeyRecord.resx
@@ -187,30 +187,97 @@
   </metadata>
   <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAEBAAAAEACABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAXNL+AOlfLAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAABAAIAEBAAAAAAIABoBAAAJgAAACAgAAAAACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAAEAE
+        AAAAAAAAAAAAAAAAAAAAAAAA////AU1NTRFNTU2FTU1N101NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3zTU1N101NTYVNTU0R////AU1NTRFNTU3PUFBQ839/f/eSkpL5kpKS+ZKSkvmSkpL5kpKS+ZKS
+        kvmSkpL5kpKS+X9/f/dQUFDzTU1NzU1NTRFNTU2FUFBQ87W1tf3U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/tbW1/VBQUPNNTU2FTU1N035+fvfU1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P9+fn73TU1N001NTfGRkZH51NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/kZGR+U1NTfFNTU3zkpKS+dTU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/5KSkvlNTU3zTU1N85KSkvnU1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P++vr77qKio+U1NTfOSkpL51NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/6enp//////9NTU3zkpKS+dTU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/4yMjPlNTU3pTU1N85KS
+        kvnU1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9LS0v9kZGT1TU1Ns01N
+        TfOSkpL51NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/8PDw/15eXn3TU1N801N
+        TUdNTU3xkZGR+dTU1P/U1NT/1NTU/9TU1P/U1NT/09PT/01NTfNNTU3zTU1N801NTfNNTU3zTU1N601N
+        TWf///8BTU1N035+fvfU1NT/1NTU/9TU1P/U1NT/1NTU/8DAwP1NTU3zTU1Nn01NTXlNTU15TU1NYU1N
+        TRX///8B////AU1NTYVQUFDztra2/dTU1P/U1NT/1NTU/9HR0f94eHj3TU1N601NTRP///8B////Af//
+        /wH///8B////Af///wFNTU0RTU1Nz1BQUPOBgYH3kpKS+Y+Pj/lkZGT1TU1N801NTWf///8B////Af//
+        /wH///8B////Af///wH///8B////AU1NTRFNTU2HTU1N201NTfNNTU3tTU1Nt01NTUX///8B////Af//
+        /wH///8B////Af///wH///8B////AQAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA
+        //8AAP//AAD//wAA//8AAP//AAD//wAA//8oAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAA////Af///wH///8B////Af///wFNTU1RTU1Nn01NTdlNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N2U1NTZ9NTU1N////Af//
+        /wH///8B////Af///wH///8B////Af///wFNTU1FTU1N0U1NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3RTU1NRf///wH///8B////Af///wH///8BTU1NYU1NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3zTU1N801NTfNNTU3zTU1NXf///wH///8B////AU1NTUFNTU3zTU1N801NTfNaWlrzm5ub+cbG
+        xv/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/xsbG/5mZmflaWlrzTU1N801NTfNNTU3zTU1NQf///wH///8BTU1N0U1NTfNNTU3zbGxs9cvL
+        y//U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/8vLy/9ra2v1TU1N801NTfNNTU3R////AU1NTU1NTU3zTU1N81pa
+        WvPJycn/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/8nJyf9aWlrzTU1N801NTfNNTU1NTU1Nl01N
+        TfNNTU3zmZmZ+dTU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/5mZmflNTU3zTU1N801N
+        TZdNTU3RTU1N801NTfPCwsL91NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/wsLC/U1N
+        TfNNTU3zTU1N0U1NTe1NTU3zTU1N89HR0f/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/R0dH/TU1N801NTfNNTU3tTU1N801NTfNNTU3z1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P9NTU3zTU1N801NTfNNTU3zTU1N801NTfPU1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/01NTfNNTU3zTU1N801NTfNNTU3zTU1N89TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/TU1N801NTfNNTU3zTU1N801NTfNNTU3z1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P9NTU3zTU1N801NTfNNTU3zTU1N801N
+        TfPU1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/////////////////01N
+        TfNNTU3zTU1N89TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/////////
+        ////////TU1N801NTfNNTU3z1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P////////////////9NTU3zTU1N801NTfPU1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/0tLS/01NTfNNTU3zTU1N701NTfNNTU3zTU1N89TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/CwsL9TU1N801NTfNNTU3RTU1N801NTfNNTU3z1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/5ubm/lNTU3zTU1N801NTZdNTU3zTU1N801NTfPU1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/Nzc3/XFxc801NTfNNTU3zTU1NUU1NTfNNTU3zTU1N89TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/y8vL/25ubvVNTU3zTU1N801NTdP///8BTU1N801N
+        TfNNTU3z1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/ycnJ/56envtdXV31TU1N801NTfNNTU3zTU1NR///
+        /wFNTU3zTU1N801NTfPU1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/TU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TWP///8B////AU1NTe1NTU3zTU1N89HR0f/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9HR0f9NTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TddNTU1H////Af///wH///8BTU1N0U1NTfNNTU3zwsLC/dTU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/wsLC/U1NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N301N
+        TaVNTU1V////Af///wH///8B////Af///wFNTU2XTU1N801NTfObm5v51NTU/9TU1P/U1NT/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P+ZmZn5TU1N801NTfNNTU2X////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////AU1NTVFNTU3zTU1N81xcXPPLy8v/1NTU/9TU
+        1P/U1NT/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/ycnJ/1xcXPNNTU3zTU1N801NTU3///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////AU1NTdNNTU3zTU1N825u
+        bvXLy8v/1NTU/9TU1P/U1NT/1NTU/9TU1P/U1NT/1NTU/8vLy/9ubm71TU1N801NTfNNTU3T////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8BTU1NRU1N
+        TfNNTU3zTU1N81xcXPOdnZ35ycnJ/9TU1P/U1NT/1NTU/8jIyP+dnZ35Wlpa801NTfNNTU3zTU1N801N
+        TUP///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8BTU1NY01NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU1j////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8BTU1NRU1NTdNNTU3zTU1N801NTfNNTU3zTU1N801NTfNNTU3zTU1N801N
+        TfNNTU3RTU1NRf///wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////Af///wH///8B////AU1NTVNNTU2lTU1N301NTfNNTU3zTU1N801N
+        TdtNTU2jTU1NU////wH///8B////Af///wH///8B////Af///wH///8B////Af///wH///8B////Af//
+        /wH///8B////Af///wH///8B////AQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAICAgICAgICAgICAgICAAICAgICAgICAgICAgICAgICAgICAgECAgICAgICAgICAgICAgIB
-        AQICAgICAgICAgICAgIBAQEBAQEBAQICAgICAgIBAQEBAQEBAAEBAgICAgIBAQAAAAEBAAABAQECAgIC
-        AQEAAQEBAAEBAAEBAgICAgEBAAAAAQABAQABAQICAgIBAQABAQEAAQEAAQECAgICAQEAAAABAQAAAQEB
-        AgICAgIBAQEBAQEBAQEBAgICAgICAgEBAQEBAQEBAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIC
-        AgICAgICAAICAgICAgICAgICAgICAIABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIABAAA=
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 </value>
   </data>
   <data name="btnLater.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -351,7 +418,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEgAACxIB0t1+/AAAAf5JREFUSEu1lg2RwkAM
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALEQAACxEBf2RfkQAAAf5JREFUSEu1lg2RwkAM
         hXGABCSggKmEk4CEk1AJSEACEpCAhEo4CVw+SHpLmu1mYY6ZDEO7yct7+Vk2m+TncDh8iZ3EroGNvE+G
         ah+TYFsxgv6I3RPGubPYrh29ckKc92JTBezmWEfnUGfblYA4HANAJOZ5GAyWgTokuE+BB6AADilnOaTl
         uRSJI/86uMpb1nLMAvpzEuvbgceya6ZlrY7vgpqfSm9ErmE8d+hj0AK8lP01rrK1kbl8yrT0d7Gnl9iu
